Closed Bug 1133478 Opened 10 years ago Closed 10 years ago

Playback of video never starts

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox37 --- wontfix
firefox38 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

http://media.junglecode.net/test/mse/ This video never start. The cause for it is that the moof's atom contains in order: tfhd trun tfdt as the trun parsing relies on having found a tfdt first, ParseTrun fails. We shouldn't rely of the atoms being in a specific order, instead we should delay parsing the trun until all depending atoms have been found.
Postpone parsing trun until we have all dependents.
Attachment #8564977 - Flags: review?(ajones)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Blocks: MSE
Comment on attachment 8564977 [details] [diff] [review] Postpone parsing TRUN atom until we have all dependent atoms Review of attachment 8564977 [details] [diff] [review]: ----------------------------------------------------------------- ::: media/libstagefright/binding/MoofParser.cpp @@ +304,5 @@ > tfdt = Tfdt(box); > + if (trun.IsAvailable()) { > + // We have a pending trun atom, process it now. > + ParseTrun(trun, tfhd, tfdt, aMdhd, aEdts); > + } Suggestioin: It may make for simpler code to iterate twice over the boxes and look for the tfdt the first iteration. That would make it less stateful and probably easier to follow.
Attachment #8564977 - Flags: review?(ajones) → review+
Attachment #8564977 - Attachment is obsolete: true
Attachment #8565152 - Flags: review?(ajones) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
This isn't critical for youtube, so we don't need to uplift to 37 unless it becomes a dependency of a later change.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: