Bug 1133478: Postpone parsing TRUN atom until we have all dependent atoms. r=k17e

Atoms may be out of order inside MOOF, in particular the TFDT may only be
defined after TRUN.